--- a/settings.gradle
+++ b/settings.gradle
@@ -56,7 +56,7 @@ plugins {
 }
 
 // This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
-rootProject.name = 'Multi-Template-Min'
+rootProject.name = 'Lupin-Template'
 include("common")
 include("fabric")
 include("forge")
