feat: parchment in fabric/forge modules

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'idea'
     id 'net.minecraftforge.gradle'
+    id 'org.parchmentmc.librarian.forgegradle'
     id 'org.spongepowered.mixin'
 }
 base {
@@ -14,7 +15,8 @@ mixin {
 }
 
 minecraft {
-    mappings channel: 'official', version: minecraft_version
+    // mappings channel: 'official', version: minecraft_version
+    mappings channel: 'parchment', version: '2023.09.03-1.20.1'
 
     copyIdeResources = true //Calls processResources when in dev
 
