--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.7-SNAPSHOT' apply(false)
     id 'net.minecraftforge.gradle' version '6.0.25' apply(false)
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+' apply(false)
     id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT' apply(false)
     id("org.spongepowered.mixin") version "0.7-SNAPSHOT" apply(false)
 
@@ -64,6 +65,10 @@ subprojects {
             content {
                 includeGroup "curse.maven"
             }
+        }
+        maven {
+            name = 'ParchmentMC'
+            url = 'https://maven.parchmentmc.org'
         }
     }
 
