--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'multiloader-loader'
     id 'net.minecraftforge.gradle' version '6.0.25'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 base {
@@ -14,7 +15,8 @@ mixin {
 }
 
 minecraft {
-    mappings channel: 'official', version: minecraft_version
+    // mappings channel: 'official', version: minecraft_version
+    mappings channel: 'parchment', version: '2024.07.28-1.21'
 
     copyIdeResources = true //Calls processResources when in dev
 
