--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,8 @@ forge_version_range=[51,)
 # NeoForge
 neoforge_version=21.1.15
 neoforge_loader_version_range=[2,)
+neogradle.subsystems.parchment.minecraftVersion=1.21
+neogradle.subsystems.parchment.mappingsVersion=2024.07.28
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
